--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "debug-ee",
   "version": "0.0.1",
   "description": "",
+  "bin": {
+    "debug-ee": "bin/cmd.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["debug", "events", "EventEmitter", "emitter"],
+  "author": "Evan Lucas <evanlucas@me.com>",
+  "license": "MIT",
   "dependencies": {
     "debug": "^3.1.0"
   }
